AC_INIT([helloauto], [1.0], [amironov@gmail.com], 
        [helloauto], [http://mironov.online])
AC_PREREQ([2.68])
AC_CONFIG_SRCDIR([hellosize.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE()
AC_CHECK_SIZEOF(size_t)
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_OUTPUT
